# sesangmansa

./: .env.example  .gitignore  Dockerfile  README.md  cloudrun.env.yaml.example  pyproject.toml
admin-ui/: package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  types.ts
admin-ui/src/api/: client.ts
admin-ui/src/pages/: CSPage.tsx  DashboardPage.tsx  ExpressionPage.tsx  LoginPage.tsx  LogsPage.tsx  SubscriptionsPage.tsx
app/: config.py  main.py
app/ai/: json_response.py  prompts.py  summarizer.py
app/api/: admin.py  routes.py
app/bot/: handlers.py  sender.py
app/cs/: curriculum.py  duplicate.py  embedding.py  generator.py  prompts.py  seeder.py  sender.py  telegraph.py
app/db/: note_utils.py  supabase.py
app/expression/: curriculum.py  generator.py  prompts.py  seeder.py  sender.py
app/news/: fetcher.py
migrations/: 001_init.sql  002_expr_cluster.sql  003_subscriptions.sql  004_fix_rpc_schema.sql
tests/: test_config.py
tests/ai/: test_json_response.py  test_summarizer.py
tests/bot/: test_handlers.py  test_sender.py
tests/cs/: test_generator.py  test_sender.py
tests/db/: test_note_utils.py
tests/e2e/: test_api_e2e.py
tests/expression/: test_generator.py  test_sender.py
tests/news/: test_fetcher.py
